# AI-Interview-Simulator

./: .gitignore  Dockerfile  README.md  SETUP.md  app.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  verify_tasks.py
AI_Interview_Simulator/: Dockerfile  check_questions.py  inference.py  requirements.txt
AI_Interview_Simulator/server/: app.py
env/: __init__.py  client.py  engine.py  graders.py  interview_env.py  models.py  tasks.py
server/: __init__.py  app.py  ui.py
